# SarOSx64

./: .gitignore  Cargo.toml  README.md  build.sh  kernel.ld
.cargo/: config.toml
src/: drivers.rs  main.rs  proc.rs  sync.rs  syscall.rs
src/arch/: x86_64.rs
src/arch/x86_64/: gdt.rs  idt.rs  io.rs  limine.rs  pic.rs  syscall_entry.rs  timer.rs  x86_64.rs
src/drivers/: bmp.rs  drivers.rs  ide.rs  keyboard.rs  logger.rs  pci.rs  serial.rs  vga.rs
src/fs/: fat32.rs  mbr.rs  mod.rs  mount.rs  path.rs  ramfs.rs  vfs.rs
src/mm/: heap.rs  mm.rs  pmm.rs  vmm.rs
src/proc/: elf.rs  exec.rs  fork.rs  proc.rs  stack.rs
src/shell/: builtins.rs  mod.rs  readline.rs
src/sync/: spinlock.rs
src/syscall/: syscall.rs
