[package]
name    = "SarOS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "SarOS"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", default-features = false }
bitflags = "2"

[profile.dev]
panic    = "abort"
opt-level = 1

[profile.release]
panic        = "abort"
opt-level    = 3
lto          = true
codegen-units = 1
